Imagine having the url prefix configured

--- a/_posts/2023-10-31-picker-1.md
+++ b/_posts/2023-10-31-picker-1.md
@@ -13,7 +13,7 @@ It's more or less Inspect Element for the game engine. Today I'll use it to show
 
 When you visit the owners of The Asylum, you talk to them in their shared room, which also houses their PCs. You can only access the PC of the sister that isn't present at the time. To selectively disable the other sister's PC, developers have put a "blocker" brush around each PC, to be selectively enabled depending on which sister is in the room.
 
-![Cutting edge access control measure](/assets/blocker.png)
+![Cutting edge access control measure](/breaking-videogames/assets/blocker.png)
 
 Video games.
 
