Expand the post with a bit of context

--- a/_posts/2023-10-31-picker-1.md
+++ b/_posts/2023-10-31-picker-1.md
@@ -5,13 +5,17 @@ date: 2023-10-31 22:00:00 -0000
 tags: picker
 ---
 
-Let me introduce you to the best console command in VtmB:
+Let me introduce you to the best console command in Vampire: The Masquerade - Bloodlines, or VtmB for short:
 
 > picker
 
 It's more or less Inspect Element for the game engine. Today I'll use it to show a developer trick.
 
 When you visit the owners of The Asylum, you talk to them in their shared room, which also houses their PCs. You can only access the PC of the sister that isn't present at the time. To selectively disable the other sister's PC, developers have put a "blocker" brush around each PC, to be enabled depending on which sister is in the room.
+
+![Therese](/breaking-videogames/assets/therese.png)
+
+Therese is in tonight. The quote in the top left encapsulates her demeanor pretty well. Let's look at her PC with the picker command enabled:
 
 ![Cutting edge access control measure](/breaking-videogames/assets/blocker.png)
 
