New post. Also linking back to the post index manually for now

--- a/_posts/2023-10-31-picker-1.md
+++ b/_posts/2023-10-31-picker-1.md
@@ -22,3 +22,5 @@ Therese is in tonight. The quote in the top left encapsulates her demeanor prett
 Video games.
 
 BONUS: There's also an odd bug involving the controls tab of the ingame settings, which may have further ramifications. However, taking screenshots of the menu has proven harder than expected.
+
+![Back to index](/breaking-videogames/)
