Fix links back to index (hopefully)

--- a/_posts/2023-10-31-picker-1.md
+++ b/_posts/2023-10-31-picker-1.md
@@ -23,4 +23,4 @@ Video games.
 
 BONUS: There's also an odd bug involving the controls tab of the ingame settings, which may have further ramifications. However, taking screenshots of the menu has proven harder than expected.
 
-![Back to index](/breaking-videogames/)
+[Back to index](/breaking-videogames/)
