--- a/_posts/2023-10-31-picker-1.md
+++ b/_posts/2023-10-31-picker-1.md
@@ -5,7 +5,7 @@ date: 2023-10-31 22:00:00 -0000
 tags: picker
 ---
 
-Let me introduce you to the best console command in Vampire: The Masquerade - Bloodlines, or VtmB for short:
+Let me introduce you to the best console command in Vampire: The Masquerade - Bloodlines, or VtMB for short:
 
 > picker
 
